# DynamixelController

./: README.md  pyproject.toml
src/dynamixel_controller/: __init__.py  dynamixel_controller.py
src/dynamixel_controller.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_current_control.py  test_position_control.py  test_reading_info.py  test_set_operating_mode.py  test_velocity_control.py  test_writing_values.py
